--- a/main.css
+++ b/main.css
@@ -133,7 +133,7 @@ header {
     top: -38px;
     left: -14px;
     z-index: 1;
-    width: 60px;
+    width: 55px;
     height: 60px;
     padding: 1rem;
     background: var(--primary-color);
@@ -161,7 +161,7 @@ header {
     content: '';
     position: absolute;
     z-index: 1;
-    top: -10px;
+    top: -8px;
     width: 100%;
     height: 2px;
     background: inherit;
@@ -169,7 +169,7 @@ header {
   
   /* Moves Line Down */
   .hamburger > div::after {
-    top: 10px;
+    top: 8px;
   }
   
   /* Toggler Animation */
@@ -405,7 +405,7 @@ header {
 
     header {
         height: 60px;
-        padding: 0 3vw;
+        padding: 0 0 0 3vw;
     }
 
     .mobile-header {
